# Ash

./: .clang-format  ash.cpp  main.cpp  meson.build
include/: parsing.hpp  pass_manager.hpp  shared_pointers.hpp  string.hpp  tcolor.hpp  ts2ast.hpp  ts2ast_helper.hpp  tsparsing.hpp
include/ast/: ast.hpp  common_ast.hpp  definitions.hpp  fields.hpp  regex.hpp
include/ast/passes/: merge_regexes.hpp  resolve.hpp  symbol_table.hpp
include/nfa/: constants.hpp  nfa.hpp
include/nfa/passes/: abstract_pass.hpp  is_deterministic.hpp  print_nfa.hpp
src/: parsing.cpp  pass_manager.cpp  string.cpp  tcolor.cpp  tsparsing.cpp
src/ast_passes/: merge_regexes.cpp  resolve.cpp  symbol_table.cpp
src/nfa/: nfa.cpp
src/nfa/passes/: abstract_pass.cpp  is_deterministic.cpp  print_nfa.cpp
src/ts2ast/: common_ast.cpp  definitions.cpp  fields.cpp  file.cpp
